<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="80dip"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <RelativeLayout
            android:id="@+id/layout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip" >

            <EditText
                android:id="@+id/userName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/userName"
                android:inputType="text"
                android:singleLine="true"
                android:maxLength="20"
                android:paddingBottom="10dip"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/clearName"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dip"
                android:background="@drawable/clear_icon"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dip" >

            <EditText
                android:id="@+id/userPwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/userPwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLength="20"
                android:paddingBottom="10dip"
                android:textColor="@color/gray"
                android:textSize="18sp" >
            </EditText>

            <ImageButton
                android:id="@+id/clearPwd"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dip"
                android:background="@drawable/clear_icon"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dip" >

            <EditText
                android:id="@+id/userPwd2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/firm_pwd"
                android:inputType="textPassword"
                android:paddingBottom="10dip"
                android:singleLine="true"
                android:maxLength="20"
                android:textColor="@color/gray"
                android:textSize="18sp" >
            </EditText>

            <ImageButton
                android:id="@+id/clearPwd2"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dip"
                android:background="@drawable/clear_icon"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dip" >

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:maxLength="20"
                android:paddingBottom="10dip"
                android:textColor="@color/gray"
                android:textSize="18sp" >
            </EditText>

            <ImageButton
                android:id="@+id/clearEmail"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dip"
                android:background="@drawable/clear_icon"
                android:visibility="invisible" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/register_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/agreementBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector_blue_light"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/agreement"
                android:textColor="@color/gray_light"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:background="@drawable/button_selector_green"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>